<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@color/black_github">


    <LinearLayout
        android:id="@+id/parent_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_16"
            android:gravity="center_horizontal"
            android:textColor="@color/orange_github"
            android:textSize="@dimen/title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textColor="@color/orange_github" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_4"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/owner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:textColor="@color/orange_github" />

            <TextView
                android:id="@+id/owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_4"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/license_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_label"
                android:textColor="@color/orange_github" />

            <TextView
                android:id="@+id/license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_4"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/permission_maintain_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_maintain_label"
                android:textColor="@color/orange_github" />

            <TextView
                android:id="@+id/permission_maintain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_4"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/permission_pull_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_pull_label"
                android:textColor="@color/orange_github" />

            <TextView
                android:id="@+id/permission_pull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_4"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/permission_push_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_push_label"
                android:textColor="@color/orange_github" />

            <TextView
                android:id="@+id/permission_push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_4"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>